--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/50eff791d6.js" crossorigin="anonymous"></script>
-    <title>Socket Test | Agile simulations</title>
+    <title>Googlr Meet | Agile simulations</title>
   </head>
   <body>
     <div id="app"></div>
